--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -6,12 +6,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RootLayoutController">
    <center>
-      <AnchorPane fx:id="apContentRoot" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="apAppRoot" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox fx:id="hbContentRoot" prefHeight="574.0" prefWidth="800.0" />
+            <VBox fx:id="vbContentRoot" prefHeight="575.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <HBox fx:id="hbGamePlayer" prefHeight="100.0" prefWidth="200.0" />
+               </children></VBox>
          </children></AnchorPane>
    </center>
    <top>
