--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -7,14 +8,25 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RootLayoutController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RootLayoutController">
    <center>
-      <AnchorPane fx:id="apAppRoot" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="apAppRoot" BorderPane.alignment="CENTER">
          <children>
-            <VBox fx:id="vbContentRoot" prefHeight="575.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox fx:id="vbContentRoot" alignment="CENTER">
                <children>
-                  <HBox fx:id="hbGamePlayer" prefHeight="100.0" prefWidth="200.0" />
+                  <HBox fx:id="hbHeader" alignment="CENTER" prefHeight="0.0">
+                     <children>
+                        <Label fx:id="lblTitle" alignment="CENTER" text="Blackjack">
+                           <font>
+                              <Font size="32.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox fx:id="hbPlayerSeats" alignment="CENTER" />
+                  <HBox alignment="CENTER" />
                </children></VBox>
          </children></AnchorPane>
    </center>
