--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RootLayoutController">
+<BorderPane prefHeight="576.0" prefWidth="865.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RootLayoutController">
    <center>
       <AnchorPane fx:id="apAppRoot" BorderPane.alignment="CENTER">
          <children>
-            <VBox fx:id="vbContentRoot" alignment="CENTER">
+            <VBox fx:id="vbContentRoot" alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox fx:id="hbHeader" alignment="CENTER" prefHeight="0.0">
+                  <HBox fx:id="hbHeader" alignment="CENTER" prefHeight="50.0" prefWidth="865.0">
                      <children>
                         <Label fx:id="lblTitle" alignment="CENTER" text="Blackjack">
                            <font>
@@ -27,7 +31,8 @@
                   </HBox>
                   <HBox fx:id="hbDealerSeat" alignment="CENTER" />
                   <HBox fx:id="hbPlayerSeats" alignment="CENTER" />
-               </children></VBox>
+               </children>
+            </VBox>
          </children></AnchorPane>
    </center>
    <top>
@@ -51,4 +56,33 @@
         </menus>
       </MenuBar>
    </top>
+   <left>
+      <Pane fx:id="pWelcome" prefHeight="551.0" prefWidth="264.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="84.0" prefWidth="264.0">
+               <children>
+                  <HBox prefHeight="49.0" prefWidth="264.0">
+                     <children>
+                        <Label prefHeight="45.0" prefWidth="112.0" text="Welcome">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="71.0" prefWidth="264.0">
+                     <children>
+                        <Label text="Name:" />
+                        <TextField />
+                        <Button fx:id="btnStartGame" mnemonicParsing="false" onAction="#startGame" text="Start" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
+   </left>
 </BorderPane>
