--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -67,7 +67,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#quitApp" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
